--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="/css/styles.css" />
+
     <!-- <script src="/script.js" defer></script> -->
 
     <title>Tic Tac Toe</title>
@@ -22,8 +24,8 @@
       <div data-square=""></div>
       <div data-square=""></div>
       <div data-square="">
-        <svg viewBox="0 0 100 100" width="115">
-          <ellipse class="o line" rx="30" ry="30" cx="50" cy="50"></ellipse>
+        <svg class="o" viewBox="0 0 100 100" width="115">
+          <ellipse class="line" rx="30" ry="30" cx="50" cy="50"></ellipse>
         </svg>
       </div>
       <div data-square=""></div>
