--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="/css/styles.css" />
 
-    <!-- <script src="/script.js" defer></script> -->
+    <script src="/script.js" defer></script>
 
     <title>Tic Tac Toe</title>
   </head>
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-      <div data-square=""></div>
+      <div data-square="" class="testPush"></div>
       <div data-square=""></div>
       <div data-square="">
         <svg class="o" viewBox="0 0 100 100" width="115">
