--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     </header>
 
     <main>
-      <div data-square="" class="testPush"></div>
+      <div data-square=""></div>
       <div data-square=""></div>
       <div data-square="">
-        <svg class="o" viewBox="0 0 100 100" width="115">
+        <!-- <svg class="o" viewBox="0 0 100 100" width="115">
           <ellipse class="line" rx="30" ry="30" cx="50" cy="50"></ellipse>
-        </svg>
+        </svg> -->
       </div>
       <div data-square=""></div>
       <div data-square="">
-        <svg class="x" viewBox="0 0 100 100" width="115">
+        <!-- <svg class="x" viewBox="0 0 100 100" width="115">
           <rect class="line left" width="80" height="10" x="10" y="45"></rect>
           <rect class="line right" width="80" height="10" x="10" y="45"></rect>
-        </svg>
+        </svg> -->
       </div>
       <div data-square=""></div>
       <div data-square=""></div>
@@ -41,6 +41,6 @@
       <div data-square=""></div>
     </main>
 
-    <div><button>switch player</button></div>
+    <div><button>test button</button></div>
   </body>
 </html>
