--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="/css/styles.css" />
 
+    <link rel="stylesheet" href="https://use.typekit.net/jfw5qrv.css" />
+
     <script src="/script.js" defer></script>
 
     <title>Tic Tac Toe</title>
