--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
     </header>
 
     <main>
-      <div data-square=""></div>
-      <div data-square=""></div>
-      <div data-square="">
+      <div data-square="" data-icon=""></div>
+      <div data-square="" data-icon=""></div>
+      <div data-square="" data-icon="">
         <!-- <svg class="o" viewBox="0 0 100 100" width="115">
           <ellipse class="line" rx="30" ry="30" cx="50" cy="50"></ellipse>
         </svg> -->
       </div>
-      <div data-square=""></div>
-      <div data-square="">
+      <div data-square="" data-icon=""></div>
+      <div data-square="" data-icon="">
         <!-- <svg class="x" viewBox="0 0 100 100" width="115">
           <rect class="line left" width="80" height="10" x="10" y="45"></rect>
           <rect class="line right" width="80" height="10" x="10" y="45"></rect>
         </svg> -->
       </div>
-      <div data-square=""></div>
-      <div data-square=""></div>
-      <div data-square=""></div>
-      <div data-square=""></div>
+      <div data-square="" data-icon=""></div>
+      <div data-square="" data-icon=""></div>
+      <div data-square="" data-icon=""></div>
+      <div data-square="" data-icon=""></div>
     </main>
 
     <div><button>test button</button></div>
