--- a/index.html
+++ b/index.html
@@ -23,26 +23,28 @@
     </header>
 
     <main>
-      <div data-square="" data-icon=""></div>
-      <div data-square="" data-icon=""></div>
-      <div data-square="" data-icon="">
+      <div data-square=""></div>
+      <div data-square=""></div>
+      <div data-square="">
         <!-- <svg class="o" viewBox="0 0 100 100" width="115">
           <ellipse class="line" rx="30" ry="30" cx="50" cy="50"></ellipse>
         </svg> -->
       </div>
-      <div data-square="" data-icon=""></div>
-      <div data-square="" data-icon="">
+      <div data-square=""></div>
+      <div data-square="">
         <!-- <svg class="x" viewBox="0 0 100 100" width="115">
           <rect class="line left" width="80" height="10" x="10" y="45"></rect>
           <rect class="line right" width="80" height="10" x="10" y="45"></rect>
         </svg> -->
       </div>
-      <div data-square="" data-icon=""></div>
-      <div data-square="" data-icon=""></div>
-      <div data-square="" data-icon=""></div>
-      <div data-square="" data-icon=""></div>
+      <div data-square=""></div>
+      <div data-square=""></div>
+      <div data-square=""></div>
+      <div data-square=""></div>
     </main>
 
-    <div><button>test button</button></div>
+    <div><button class="reset">reset</button></div>
+    <div><button class="player1">player1 name</button></div>
+    <div><button class="player2">player2 name</button></div>
   </body>
 </html>
