--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
     <header>
       <h1>tic tac toe</h1>
       <div class="status-bar">
-        <p>player 1</p>
+        <p data-player-name="player1">player 1</p>
         <div class="active-player"><div></div></div>
-        <p>player 2</p>
+        <p data-player-name="player2">player 2</p>
       </div>
     </header>
 
     <main>
-      <div data-square=""></div>
-      <div data-square=""></div>
-      <div data-square="">
+      <div data-square></div>
+      <div data-square></div>
+      <div data-square>
         <!-- <svg class="o" viewBox="0 0 100 100" width="115">
           <ellipse class="line" rx="30" ry="30" cx="50" cy="50"></ellipse>
         </svg> -->
       </div>
-      <div data-square=""></div>
-      <div data-square="">
+      <div data-square></div>
+      <div data-square>
         <!-- <svg class="x" viewBox="0 0 100 100" width="115">
           <rect class="line left" width="80" height="10" x="10" y="45"></rect>
           <rect class="line right" width="80" height="10" x="10" y="45"></rect>
         </svg> -->
       </div>
-      <div data-square=""></div>
-      <div data-square=""></div>
-      <div data-square=""></div>
-      <div data-square=""></div>
+      <div data-square></div>
+      <div data-square></div>
+      <div data-square></div>
+      <div data-square></div>
     </main>
 
     <div><button class="reset">reset</button></div>
-    <div><button class="player1">player1 name</button></div>
+    <div><button data-button>player1 name</button></div>
     <div><button class="player2">player2 name</button></div>
   </body>
 </html>
