Optimized checkForWin() logic

--- a/index.html
+++ b/index.html
@@ -45,8 +45,18 @@
       <div data-square></div>
     </main>
 
-    <div><button class="reset">reset</button></div>
-    <div><button data-button="player1">player1 name</button></div>
-    <div><button data-button="player2">player2 name</button></div>
+    <footer>
+      <div>
+        <button data-button="player1">player 1 name</button>
+      </div>
+
+      <div>
+        <button class="reset">reset</button>
+      </div>
+
+      <div>
+        <button data-button="player2">player 2 name</button>
+      </div>
+    </footer>
   </body>
 </html>
